--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/JhonPerez95/Chat-FullStack-JavaScript/issues"
   },
-  "homepage": "https://github.com/JhonPerez95/Chat-FullStack-JavaScript#readme"
+  "homepage": "https://github.com/JhonPerez95/Chat-FullStack-JavaScript#readme",
+  "devDependencies": {
+    "nodemon": "^1.18.10"
+  }
 }
